# pysolvemath

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/: __init__.py  control_flow.py  initial_guess.py  parsing.py  pysolvemath.py  solve_func.py  solver.py  stop_solve.py
src/pysolvemath/: __init__.py  initial_guess.py  parsing.py  solve_equation.py  solve_logic.py  solver.py  stop_solve.py
