[metadata]
name = pysolvemath
version = 0.3
author = David
author_email = yx.z@hotmail.com
description = Numeric Solver.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yx-z/pysolvemath
project_urls =
    Bug Tracker = https://github.com/yx-z/pysolvemath/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src